--- a/src/components/home/RegulationPanel/RegulationPanel.module.css
+++ b/src/components/home/RegulationPanel/RegulationPanel.module.css
@@ -14,7 +14,7 @@
 
 /* Sidebar */
 .sidebar {
-  background-color: white;
+  background-color: #f9fafb;
   border-right: 1px solid #e2e8f0;
   display: flex;
   flex-direction: column;
@@ -52,7 +52,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
-  background-color: white;
+  background-color: #f3f4f6;
   gap: 0.5rem;
   transition: background-color 0.3s ease;
 }
@@ -104,7 +104,7 @@
 
 .sidebarTitleSection {
   padding: 1rem;
-  background-color: #ffffff;
+  background-color: #f3f4f6;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -234,7 +234,7 @@
   flex: 1;
   overflow-y: auto;
   padding: 0.5rem;
-  background-color: white;
+  background-color: #f3f4f6;
   transition: background-color 0.3s ease;
 }
 
@@ -246,7 +246,7 @@
 .sidebarFooter {
   position: relative;
   background-color: white;
-  border-top: 1px solid #f3f4f6;
+  border-top: 1px solid #e2e8f0;
   transition: all 0.3s ease;
 }
 
@@ -271,7 +271,7 @@
   transition: background-color 0.2s ease;
   width: 100%;
   text-align: left;
-  background-color: white;
+  background-color: #f3f4f6;
 }
 
 :global(.dark-mode) .userButton {
